# SimCortexPP

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: preprocess_fs_to_mni_bidsderiv.py
src/nipoppy_custom_pipeline/cli/: main.py
src/nipoppy_custom_pipeline/configs/seg/: eval.yaml  inference.yaml  train.yaml
src/nipoppy_custom_pipeline/seg/: eval.py  inference.py  train.py
src/nipoppy_custom_pipeline/seg/data/: dataloader.py
src/simcortexpp/cli/: main.py
src/simcortexpp/configs/deform/: eval.yaml  inference.yaml  train.yaml
src/simcortexpp/deform/: eval.py  inference.py  train.py
src/simcortexpp/deform/data/: dataloader.py
src/simcortexpp/deform/models/: surfdeform.py
src/simcortexpp/deform/utils/: coords.py
