[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simcortexpp"
version = "0.1.0"
description = "SimCortexPP (SCPP) — CLI-first pipeline for cortical surface reconstruction (preproc, seg, initsurf, deform)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kaveh Moradkhani"  }]

dependencies = [
  "typer>=0.12",
  "numpy>=1.24",
  "pandas>=2.0",
  "nibabel>=5.2",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "tqdm>=4.66",
  "tensorboard>=2.14",

  # Used in Stage 1/3/4 (mesh IO, exports)
  "trimesh>=4.0",

  # Used for Excel reports (seg eval / deform eval)
  "openpyxl>=3.1",
]

[project.optional-dependencies]
# Segmentation dependencies (keep torch optional for HPC)
seg = [
  "monai>=1.3",
]

# Deform evaluation extras (optional)
deform-metrics = [
  "python-fcl",     # collision metrics
  "pymeshlab",      # SIF (self-intersection fraction)
]

# If you want a convenience extra (users still may need the right CUDA wheels)
torch = [
  "torch>=2.0",
  # Pytorch3D is often installed separately (conda/pip with specific wheels).
  # Keep it optional and document the install in README.
  # "pytorch3d>=0.7.7",
]

[project.scripts]
scpp = "simcortexpp.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
simcortexpp = [
  "configs/**/*.yaml",
  # If you want these included in the installed package, uncomment:
  # "critical186LUT.raw.gz",
  # "MNI152_T1_1mm.nii.gz",
]
