[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simcortexpp"
version = "0.1.2"
description = "SimCortexPP (SCPP) is a modular pipeline for cortical surface reconstruction (preproc, seg, initsurf, deform)"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Kaveh Moradkhani" },
  { name = "Sylvain Bouix" }
]

dependencies = [
  "typer>=0.12",
  "numpy>=1.24",
  "pandas>=2.0",
  "nibabel>=5.2",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "tqdm>=4.66",
  "tensorboard>=2.14",
  "trimesh>=4.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
seg = [
  "monai>=1.3",
]

deform-metrics = [
  "python-fcl",
  "pymeshlab",
]

torch = [
  "torch>=2.0",
]

[project.scripts]
scpp = "simcortexpp.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
simcortexpp = [
  "configs/**/*.yaml",
]