[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simcortexpp"
version = "0.1.5"
description = "SimCortexPP is a modular framework for cortical surface reconstruction."
readme = "README.md"
requires-python = ">=3.10"

license = { file = "LICENSE" }

authors = [
  { name = "Kaveh Moradkhani" },
  { name = "Sylvain Bouix" }
]

[project.urls]
"Source Code" = "https://github.com/Neuro-iX/simcortexpp"
"Lab Page" = "https://github.com/Neuro-iX"


classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "typer>=0.12",
  "numpy>=1.24",
  "pandas>=2.0",
  "nibabel>=5.2",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "tqdm>=4.66",
  "tensorboard>=2.14",
  "trimesh>=4.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
seg = [
  "monai>=1.3",
]

deform-metrics = [
  "python-fcl",
  "pymeshlab",
]

torch = [
  "torch>=2.0",
]

[project.scripts]
scpp = "simcortexpp.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
simcortexpp = [
  "configs/**/*.yaml",
]

